# cogito

./: .dockerignore  .gitignore  AGENTS.md  ASSESSMENT.md  Makefile  README.md
apps/apigateway/: AGENTS.md  Dockerfile  genproto.sh  go.mod  go.sum  main.go
apps/apigateway/api/: auth_controller.go  auth_controller_test.go  auth_guard.go  auth_guard_test.go  context.go  login_throttle.go  login_throttle_test.go  mappers.go  mappers_test.go  models.go  notification_controller.go  notification_controller_test.go  post_controller.go  post_controller_test.go  rate_limiter.go  rate_limiter_test.go  resilience.go  resilience_test.go  router.go  search_blend.go  search_blend_test.go  search_controller.go  search_controller_test.go  server.go  server_test.go  user_controller.go  user_controller_test.go  utils.go  utils_test.go
apps/apigateway/genproto/: cogito.pb.go  cogito_grpc.pb.go  thoughts.pb.go  thoughts_grpc.pb.go
apps/authservice/: AGENTS.md  Cargo.toml  Dockerfile  build.rs
apps/authservice/src/: controller.rs  db_client.rs  internal_auth.rs  main.rs
apps/database/: run.sh
apps/database/migrations/: 000001_create_users.down.sql  000001_create_users.up.sql  000002_create_sessions.up.sql  000003_create_posts.down.sql  000003_create_posts.up.sql  000004_create_uploads.down.sql  000004_create_uploads.up.sql  000005_create_hashtags.down.sql  000005_create_hashtags.up.sql  000005_create_rate_limits.up.sql  000006_create_hashtags.down.sql  000006_create_hashtags.up.sql  000006_create_notifications.up.sql  000007_create_feed.up.sql  000008_create_notifications.up.sql  000009_alter_users_username_length.down.sql  000009_alter_users_username_length.up.sql  000009_create_feed.up.sql  (+12 more)
apps/eventsservice/: Dockerfile  controller.go  go.mod  go.sum  server.go  service.go  utils.go
apps/flowservice/: AGENTS.md  Cargo.toml  Cargo.toml.bak  Dockerfile  build.rs
apps/frontend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  eslint.config.js  next.config.mjs  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend-svelte/: eslint.config.js  package.json  svelte.config.js
apps/imageservice/: AGENTS.md  Cargo.toml  Dockerfile  build.rs
apps/imageservice/src/: blobstore.rs  db_client.rs  grpc.rs  http.rs  internal_auth.rs  main.rs  tests.rs
apps/postservice/: .dockerignore  AGENTS.md  genproto.sh  go.mod  main.go
apps/searchservice/: .dockerignore  go.mod  go.sum  main.go
apps/userservice/: AGENTS.md  Cargo.toml  Dockerfile  build.rs
apps/userservice/src/: controller.rs  db_client.rs  internal_auth.rs  main.rs  pagination.rs  tests.rs  utils.rs
deploy/: apigateway.yaml  authservice.yaml  broker-backfill.yaml  broker.yaml  cache.yaml  database.yaml  eventsservice.yaml  flowservice.yaml  frontend.yaml  imageservice.yaml  imagevolume.yaml  network-policy.yaml  networkpolicy.yaml  pdb.yaml  postservice.yaml  search.yaml  searchservice.yaml  serviceaccounts.yaml  storage.yaml  userservice.yaml
docs/: FRONTEND_IMPROVEMENTS.md  api.md  architecture.md  asyncservice-proposal.md  business-rules.md  data-model.md  design-system.md  flowservice-todo.md  frontend.md  infrastructure.md  search-and-infrastructure-plan.md  search-and-infrastructure-todo.md  security.md  sveltekit-migration-todo.md
k8s/: apigateway.yaml  authservice.yaml  database.yaml  databasevolume.yaml  frontend.yaml  imageservice.yaml  imagevolume.yaml  postservice.yaml  secret.yaml  userservice.yaml
pb/: thoughts.proto
pkg/pb/: cogito.proto  thoughts.proto
scripts/: deploy.sh  failure-drill.sh
src/apigateway/: Dockerfile  go.mod  go.sum  main.go
src/authservice/: .gitignore  Cargo.toml  Dockerfile
src/authservice/authservice/: __init__.py  controller.py  crypto.py  db_client.py  mappers.py  thoughts_pb2.py  thoughts_pb2_grpc.py
src/authservice/pb/: thoughts_pb2.py  thoughts_pb2_grpc.py
src/authservice/src/: controller.rs  db_client.rs  main.rs
src/database/: run.sh  schema.sql
src/frontend/: Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  setupProxy.js  tailwind.config.js
src/imageservice/: Cargo.toml  Dockerfile  build.rs
src/imageservice/src/: db.rs  db_client.rs  grpc.rs  http.rs  logging.rs  main.rs  tests.rs
src/postservice/: Dockerfile  go.mod  go.sum  main.go
src/userservice/: Cargo.toml  Dockerfile  requirements.txt
src/userservice/src/: controller.rs  crypto.rs  db_client.rs  internal_auth.rs  logging.rs  main.rs  tests.rs  thoughts.rs  utils.rs
src/userservice/userservice/: __init__.py  controller.py  crypto.py  db_client.py  thoughts_pb2.py  thoughts_pb2_grpc.py  utils.py
(+494 files in other folders)
