[package]
name = "imageservice"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util", "net"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
uuid = { version = "1.8", features = ["v4"] }
serde_json = "1.0"
async-trait = "0.1"
subtle = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
tonic-build = "0.11"
