[package]
name = "userservice"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
regex = "1.10"
async-trait = "0.1"
hmac = "0.13.0"
subtle = "2"
sha2 = "0.11.0"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[build-dependencies]
tonic-build = "0.11"
