[package]
name = "authservice"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
sha2 = "0.11.0"
hmac = "0.13.0"

[build-dependencies]
tonic-build = "0.11"
