[package]
name = "imageservice"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util", "net"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
uuid = { version = "1.8", features = ["v4"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.11"
