[package]
name = "userservice"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono"] }
bcrypt = "0.15"
regex = "1.10"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.11"
